# serde-protobuf

./: Cargo.toml  README.md
src/: de.rs  descriptor.rs  error.rs  lib.rs  value.rs
testdata/: descriptors.pb  hash
tests/: lib.rs
tests/protobuf_unittest/: unittest.rs  unittest_import.rs  unittest_import_public.rs
